# dimmerpatch

./: Makefile  setup.cfg
src/dimmerpatch/: lightmap.py  lightstrip.py  patchpanel.py
