[metadata]
name = dimmerpatch
version = 0.1.0
author = Jonathan Love
author_email = jon.d.love@gmail.com
description = Configure patch panels of light and dimmer fixtures
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jondlove/coloranimate
project_urls =
    Bug Tracker = https://github.com/jondlove/coloranimate/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src